--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -189,154 +189,147 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-<!--                    <RelativeLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginTop="@dimen/_12sdp"-->
-<!--                        android:background="@color/white"-->
-<!--                        android:paddingLeft="@dimen/_20sdp"-->
-<!--                        android:paddingRight="@dimen/_30sdp">-->
-
-<!--                        <TextView-->
-<!--                            android:id="@+id/tvCurrency"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_gravity="center"-->
-<!--                            android:layout_toLeftOf="@+id/lyAmount"-->
-<!--                            android:fontFamily="@font/opensans_bold"-->
-<!--                            android:paddingTop="@dimen/_9sdp"-->
-<!--                            android:paddingBottom="@dimen/_7sdp"-->
-<!--                            android:text="$"-->
-<!--                            android:textColor="@color/primary_black"-->
-<!--                            android:textSize="@dimen/_40ssp"-->
-<!--                            android:visibility="gone" />-->
-
-<!--                        <LinearLayout-->
-<!--                            android:id="@+id/lyAmount"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_marginLeft="@dimen/_5sdp"-->
-<!--                            android:layout_toLeftOf="@+id/imgConvert"-->
-<!--                            android:orientation="horizontal">-->
-
-<!--                            <EditText-->
-<!--                                android:id="@+id/etAmount"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:background="@color/white"-->
-<!--                                android:fontFamily="@font/opensans_bold"-->
-<!--                                android:gravity="center_vertical|right"-->
-<!--                                android:hint="0.00"-->
-<!--                                android:inputType="numberDecimal"-->
-<!--                                android:maxLength="@string/maxlength"-->
-<!--                                android:textColor="@color/primary_black"-->
-<!--                                android:textColorHint="@color/light_gray"-->
-<!--                                android:textCursorDrawable="@drawable/cursorcolor"-->
-<!--                                android:textSize="@dimen/_53ssp" />-->
-
-<!--                            <TextView-->
-<!--                                android:id="@+id/tvCYN"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:fontFamily="@font/opensans_bold"-->
-<!--                                android:text=" CYN"-->
-<!--                                android:textColor="@color/primary_black"-->
-<!--                                android:textSize="@dimen/_12ssp"-->
-<!--                                android:visibility="visible" />-->
-<!--                        </LinearLayout>-->
-
-<!--                        <View-->
-<!--                            android:id="@+id/divider"-->
-<!--                            android:layout_width="@dimen/_1sdp"-->
-<!--                            android:layout_height="@dimen/_42sdp"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_gravity="center"-->
-<!--                            android:layout_marginLeft="@dimen/_5sdp"-->
-<!--                            android:layout_toLeftOf="@+id/imgConvert"-->
-<!--                            android:background="@color/light_gray"-->
-<!--                            android:visibility="gone" />-->
-
-<!--                        <ImageView-->
-<!--                            android:id="@+id/imgConvert"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_alignParentRight="true"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_marginLeft="@dimen/_7sdp"-->
-<!--                            android:layout_marginTop="@dimen/_8sdp"-->
-<!--                            android:src="@drawable/ic_download" />-->
-<!--                    </RelativeLayout>-->
-
-                    <LinearLayout
-                        android:id="@+id/linearLayoutnew"
+                    <RelativeLayout
+                        android:id="@+id/payLL"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_60sdp"
-                        android:layout_margin="@dimen/_10ssp"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:layout_height="@dimen/_80sdp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
                         <LinearLayout
+                            android:id="@+id/lyamountview1"
                             android:layout_width="match_parent"
+                            android:gravity="center"
                             android:layout_height="wrap_content"
-                            android:id="@+id/ll_values"
-                            android:gravity="center_horizontal"
-                            android:layout_gravity="center_vertical"
                             android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/tvCurrency"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="top"
-                                android:layout_marginEnd="@dimen/_5sdp"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="$"
+                                android:layout_gravity="top"
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_15ssp"
+                                android:textSize="@dimen/_20sdp"
                                 android:visibility="gone" />
 
-                            <EditText
-                                android:id="@+id/etAmount"
+                            <LinearLayout
+                                android:id="@+id/lyAmount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:background="@color/white"
-                                android:fontFamily="@font/opensans_bold"
-                                android:gravity="center_vertical"
-                                android:hint="0.00"
-                                android:inputType="numberDecimal"
-                                android:maxLength="@string/maxlengthamount"
-                                android:textColor="@color/primary_black"
-                                android:textColorHint="@color/light_gray"
-                                android:textCursorDrawable="@drawable/cursorcolor"
-                                android:textSize="@dimen/_53sdp" />
+                                android:layout_gravity="center"
+                                android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/tvCYN"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom"
-                                android:fontFamily="@font/opensans_bold"
-                                android:text=" CYN"
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_12ssp"
-                                android:visibility="visible">
+                                <EditText
+                                    android:id="@+id/etAmount"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/white"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:gravity="center_vertical|right"
+                                    android:hint="0.00"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="@string/maxlength"
+                                    android:textColor="@color/primary_black"
+                                    android:textColorHint="@color/light_gray"
+                                    android:cursorVisible="true"
+                                    android:textCursorDrawable="@drawable/cursor_green"
+                                    android:textSize="@dimen/_53ssp" />
 
-                            </TextView>
+                                <TextView
+                                    android:id="@+id/tvCYN"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text=" CYN"
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_12ssp"
+                                    android:visibility="visible"></TextView>
+                            </LinearLayout>
 
                             <ImageView
                                 android:id="@+id/imgConvert"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10ssp"
+                                android:layout_marginBottom="@dimen/_10ssp"
                                 android:layout_gravity="bottom"
-                                android:layout_marginStart="@dimen/_5sdp"
-                                android:layout_marginBottom="@dimen/_5sdp"
                                 android:src="@drawable/ic_download" />
+
                         </LinearLayout>
 
-                    </LinearLayout>
+                    </RelativeLayout>
+
+<!--                    <LinearLayout-->
+<!--                        android:id="@+id/linearLayoutnew"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="@dimen/_60sdp"-->
+<!--                        android:layout_margin="@dimen/_10ssp"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
+
+<!--                        <LinearLayout-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:id="@+id/ll_values"-->
+<!--                            android:gravity="center_horizontal"-->
+<!--                            android:layout_gravity="center_vertical"-->
+<!--                            android:orientation="horizontal">-->
+
+<!--                            <TextView-->
+<!--                                android:id="@+id/tvCurrency"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_gravity="top"-->
+<!--                                android:layout_marginEnd="@dimen/_5sdp"-->
+<!--                                android:fontFamily="@font/opensans_bold"-->
+<!--                                android:text="$"-->
+<!--                                android:textColor="@color/primary_black"-->
+<!--                                android:textSize="@dimen/_15ssp"-->
+<!--                                android:visibility="gone" />-->
+
+<!--                            <EditText-->
+<!--                                android:id="@+id/etAmount"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_gravity="center_vertical"-->
+<!--                                android:background="@color/white"-->
+<!--                                android:fontFamily="@font/opensans_bold"-->
+<!--                                android:gravity="center_vertical"-->
+<!--                                android:hint="0.00"-->
+<!--                                android:inputType="numberDecimal"-->
+<!--                                android:maxLength="@string/maxlengthamount"-->
+<!--                                android:textColor="@color/primary_black"-->
+<!--                                android:textColorHint="@color/light_gray"-->
+<!--                                android:textCursorDrawable="@drawable/cursorcolor"-->
+<!--                                android:textSize="@dimen/_53sdp" />-->
+
+<!--                            <TextView-->
+<!--                                android:id="@+id/tvCYN"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_gravity="bottom"-->
+<!--                                android:fontFamily="@font/opensans_bold"-->
+<!--                                android:text=" CYN"-->
+<!--                                android:textColor="@color/primary_black"-->
+<!--                                android:textSize="@dimen/_12ssp"-->
+<!--                                android:visibility="visible">-->
+
+<!--                            </TextView>-->
+
+<!--                            <ImageView-->
+<!--                                android:id="@+id/imgConvert"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_gravity="bottom"-->
+<!--                                android:layout_marginStart="@dimen/_5sdp"-->
+<!--                                android:layout_marginBottom="@dimen/_5sdp"-->
+<!--                                android:src="@drawable/ic_download" />-->
+<!--                        </LinearLayout>-->
+
+<!--                    </LinearLayout>-->
 
                     <TextView
                         android:id="@+id/tvError"
