--- a/app/src/main/res/layout/activity_company_info_details.xml
+++ b/app/src/main/res/layout/activity_company_info_details.xml
@@ -82,8 +82,7 @@
                         android:layout_marginBottom="@dimen/_6sdp"
                         android:fontFamily="@font/opensans_bold"
                         android:text=""
-                        android:singleLine="true"
-                        android:ellipsize="marquee"
+                        android:textAlignment="center"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_24ssp" />
 
