--- a/app/src/main/res/layout/activity_business_refund.xml
+++ b/app/src/main/res/layout/activity_business_refund.xml
@@ -118,7 +118,7 @@
                             android:layout_marginRight="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="center"
-                            android:text="“[Refund Reason] ”"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_10ssp" />
 
