--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -135,9 +135,15 @@
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent">-->
 
+    <ScrollView
+        android:id="@+id/activity_expandable_scroll_view"
+        android:layout_width="match_parent"
+        android:fillViewport="true"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_10ssp"
             android:layout_marginBottom="@dimen/_10ssp"
             android:orientation="vertical">
@@ -149,7 +155,7 @@
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:divider="@null"
                 android:groupIndicator="@null"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -260,6 +266,6 @@
 
         </LinearLayout>
 
-<!--    </ScrollView>-->
+    </ScrollView>
 
 </LinearLayout>
