--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -328,6 +328,7 @@
                                 android:orientation="horizontal">
 
                                 <TextView
+                                    android:id="@+id/merchant_balance_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_10sdp"
